--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ily Devlep | Portfolio</title>
+  <title>Fahad Devlep | Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Particles.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
@@ -281,7 +281,7 @@
   <!-- Footer -->
   <footer class="py-8 text-center">
     <div class="space-glass rounded-full inline-block px-8 py-4 cosmic-glow">
-      <span class="text-blue-300">© 2025 ily Devlep - Navigating the Infinite Darkness</span>
+      <span class="text-blue-300">© 2025 Fahad Devlep - Navigating the Infinite Darkness</span>
     </div>
   </footer>
 
