--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
   <!-- Navbar -->
   <nav class="flex justify-between items-center p-6 space-glass rounded-full mx-4 mt-4 cosmic-glow">
-    <h1 class="text-3xl font-bold starlight-text cursor-default">ily Devlep</h1>
+    <h1 class="text-3xl font-bold starlight-text cursor-default">Fahad Devlep</h1>
     <button id="toggleTheme" class="px-6 py-3 rounded-full stellar-gradient hover:scale-105 transition-transform cosmic-glow font-semibold text-blue-200">
       Deep Space
     </button>
