--- a/index.html
+++ b/index.html
@@ -233,31 +233,17 @@
     <h2 class="text-5xl font-bold text-center mb-12 starlight-text">Void Projects</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
       
-      <div class="space-glass rounded-3xl p-6 cosmic-glow hover:scale-105 transition-transform cursor-pointer floating">
-        <div class="deep-space rounded-2xl h-48 flex items-center justify-center mb-4 border border-gray-800">
-          <span class="text-2xl font-bold text-blue-300">🚀 Project Alpha</span>
-        </div>
-        <h3 class="text-xl font-bold mb-2 text-blue-200">Deep Space App</h3>
-        <p class="text-gray-400">Application navigating the cosmic void</p>
-      </div>
+     <div class="project-card">
+  <img src="https://cdn.discordapp.com/attachments/1391612688651522120/1394885016424681472/IMG_5153.png?ex=687bbb27&is=687a69a7&hm=037a013a617176961ccadc4c493ee17afb29513d78c2142d1267177c6251afee&" alt="Project 1" class="project-image" />
+</div>
 
-      <div class="space-glass rounded-3xl p-6 cosmic-glow hover:scale-105 transition-transform cursor-pointer floating">
-        <div class="void-gradient rounded-2xl h-48 flex items-center justify-center mb-4 border border-gray-800">
-          <span class="text-2xl font-bold text-indigo-300">🌌 Project Beta</span>
-        </div>
-        <h3 class="text-xl font-bold mb-2 text-indigo-200">Dark Matter Dashboard</h3>
-        <p class="text-gray-400">Dashboard for monitoring the infinite darkness</p>
-      </div>
+   <div class="project-card">
+  <img src="https://cdn.discordapp.com/attachments/1391612688651522120/1394906073999212584/IMG_5158.png?ex=687bcec4&is=687a7d44&hm=3b164ad72dda8d59ef7bd7a082c422b706146c631cfa9741854318724852fbf1&" alt="Project 1" class="project-image" />
+</div>
 
-      <div class="space-glass rounded-3xl p-6 cosmic-glow hover:scale-105 transition-transform cursor-pointer floating">
-        <div class="stellar-gradient rounded-2xl h-48 flex items-center justify-center mb-4 border border-gray-800">
-          <span class="text-2xl font-bold text-purple-300">⭐ Project Gamma</span>
-        </div>
-        <h3 class="text-xl font-bold mb-2 text-purple-200">Black Hole Explorer</h3>
-        <p class="text-gray-400">3D exploration of cosmic phenomena</p>
-      </div>
-    </div>
-  </section>
+<div class="project-card">
+  <img src="https://cdn.discordapp.com/attachments/1391612688651522120/1394922689269076028/IMG_5160.png?ex=687b357d&is=6879e3fd&hm=0c530d41cf0b8112c95303b3118c7947b6087dc4559a28892baeaba4156e47fd&" alt="Project 1" class="project-image" />
+</div>
 
   <!-- Contact Section -->
   <section id="contact" class="py-16 px-4 max-w-lg mx-auto">
