--- a/index.html
+++ b/index.html
@@ -124,6 +124,61 @@
       0%, 100% { opacity: 0.8; }
       50% { opacity: 0.4; }
     }
+    .projects-section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 4rem 1rem;
+  text-align: center;
+}
+
+.section-title {
+  font-size: 3rem;
+  font-weight: 900;
+  background: linear-gradient(45deg, #6666cc, #9999ff, #ccccff, #6666cc);
+  background-size: 300% 300%;
+  animation: starlight-shimmer 4s ease infinite;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 3rem;
+}
+
+.projects-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+
+.project-card {
+  width: 220px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.project-card:hover {
+  transform: scale(1.05);
+}
+
+.project-image-circle {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid rgba(102, 102, 204, 0.7);
+  box-shadow: 0 0 15px rgba(102, 102, 204, 0.5);
+  margin-bottom: 1rem;
+}
+
+.project-title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #9999ff;
+  text-shadow: 0 0 5px rgba(102, 102, 204, 0.7);
+}
   </style>
 </head>
 <body class="text-white transition-all duration-500 relative min-h-screen overflow-x-hidden">
@@ -229,17 +284,27 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="py-16 px-4 max-w-6xl mx-auto">
-    <h2 class="text-5xl font-bold text-center mb-12 starlight-text">Void Projects</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-      
-     <div class="project-card">
-  <img src="https://cdn.discordapp.com/attachments/1391612688651522120/1394885016424681472/IMG_5153.png?ex=687bbb27&is=687a69a7&hm=037a013a617176961ccadc4c493ee17afb29513d78c2142d1267177c6251afee&" alt="Project 1" class="project-image" />
-</div>
+  <section id="projects" class="projects-section">
+  <h2 class="section-title">My Projects</h2>
+  <div class="projects-container">
+    
+    <div class="project-card">
+      <img src="images/project1.png" alt="Project 1" class="project-image-circle" />
+      <h3 class="project-title">Project Alpha</h3>
+    </div>
 
-   <div class="project-card">
-  <img src="https://cdn.discordapp.com/attachments/1391612688651522120/1394906073999212584/IMG_5158.png?ex=687bcec4&is=687a7d44&hm=3b164ad72dda8d59ef7bd7a082c422b706146c631cfa9741854318724852fbf1&" alt="Project 1" class="project-image" />
-</div>
+    <div class="project-card">
+      <img src="images/project2.png" alt="Project 2" class="project-image-circle" />
+      <h3 class="project-title">Project Beta</h3>
+    </div>
+
+    <div class="project-card">
+      <img src="images/project3.png" alt="Project 3" class="project-image-circle" />
+      <h3 class="project-title">Project Gamma</h3>
+    </div>
+
+  </div>
+</section>
 
 <div class="project-card">
   <img src="https://cdn.discordapp.com/attachments/1391612688651522120/1394922689269076028/IMG_5160.png?ex=687b357d&is=6879e3fd&hm=0c530d41cf0b8112c95303b3118c7947b6087dc4559a28892baeaba4156e47fd&" alt="Project 1" class="project-image" />
