--- a/index.html
+++ b/index.html
@@ -283,32 +283,27 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="projects-section">
+  <!-- Projects Section --><section class="projects-section" id="projects">
   <h2 class="section-title">My Projects</h2>
   <div class="projects-container">
     
     <div class="project-card">
-      <img src="images/project1.png" alt="Project 1" class="project-image-circle" />
+      <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968052369195048/Screenshot_2024-06-06-17-39-00-65_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg?ex=6661f951&is=6660a7d1&hm=30a991226d31e9d760e96a9634a51199f5e870f3d0e35fbc08b4ee1c3ed78f91&" alt="Project 1" class="project-image-circle">
       <h3 class="project-title">Project Alpha</h3>
     </div>
 
     <div class="project-card">
-      <img src="images/project2.png" alt="Project 2" class="project-image-circle" />
+      <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968052369195048/Screenshot_2024-06-06-17-39-00-65_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg?ex=6661f951&is=6660a7d1&hm=30a991226d31e9d760e96a9634a51199f5e870f3d0e35fbc08b4ee1c3ed78f91&" alt="Project 2" class="project-image-circle">
       <h3 class="project-title">Project Beta</h3>
     </div>
 
     <div class="project-card">
-      <img src="images/project3.png" alt="Project 3" class="project-image-circle" />
+      <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968052369195048/Screenshot_2024-06-06-17-39-00-65_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg?ex=6661f951&is=6660a7d1&hm=30a991226d31e9d760e96a9634a51199f5e870f3d0e35fbc08b4ee1c3ed78f91&" alt="Project 3" class="project-image-circle">
       <h3 class="project-title">Project Gamma</h3>
     </div>
 
   </div>
 </section>
-
-<div class="project-card">
-  <img src="https://cdn.discordapp.com/attachments/1391612688651522120/1394922689269076028/IMG_5160.png?ex=687b357d&is=6879e3fd&hm=0c530d41cf0b8112c95303b3118c7947b6087dc4559a28892baeaba4156e47fd&" alt="Project 1" class="project-image" />
-</div>
 
   <!-- Contact Section -->
   <section id="contact" class="py-16 px-4 max-w-lg mx-auto">
