--- a/index.html
+++ b/index.html
@@ -1,131 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ily Devlep - Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"/>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>ily Devlep - Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"/>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-    body {
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #0a0f2c, #1c1f3f);
-      color: #fff;
-    }
+      body {
+        font-family: 'Orbitron', sans-serif;
+        background: linear-gradient(135deg, #0a0f2c, #1c1f3f);
+        color: #fff;
+      }
 
-    header {
-      padding: 2rem;
-      text-align: center;
-      background-color: rgba(0, 0, 0, 0.2);
-      backdrop-filter: blur(10px);
-    }
+      header {
+        padding: 2rem;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.2);
+        backdrop-filter: blur(10px);
+      }
 
-    h1 {
-      font-size: 3rem;
-      background: linear-gradient(90deg, #0ff, #00f6ff, #0ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+      h1 {
+        font-size: 3rem;
+        background: linear-gradient(90deg, #0ff, #00f6ff, #0ff);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
 
-    section {
-      padding: 3rem 1rem;
-      text-align: center;
-    }
+      section {
+        padding: 3rem 1rem;
+        text-align: center;
+      }
 
-    .section-title {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #0ff;
-    }
+      .section-title {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+        color: #0ff;
+      }
 
-    .section-subtitle {
-      color: #aaa;
-      margin-bottom: 2rem;
-    }
+      .section-subtitle {
+        color: #aaa;
+        margin-bottom: 2rem;
+      }
 
-    .projects-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 2rem;
-    }
+      .projects-container {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 2rem;
+      }
 
-    .project-card {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 1rem;
-      border-radius: 1rem;
-      width: 200px;
-      transition: transform 0.3s;
-      backdrop-filter: blur(5px);
-    }
+      .project-card {
+        background: rgba(255, 255, 255, 0.05);
+        padding: 1rem;
+        border-radius: 1rem;
+        width: 200px;
+        transition: transform 0.3s;
+        backdrop-filter: blur(5px);
+      }
 
-    .project-card:hover {
-      transform: scale(1.05);
-    }
+      .project-card:hover {
+        transform: scale(1.05);
+      }
 
-    .project-title {
-      margin-top: 1rem;
-      color: #0ff;
-    }
+      .project-title {
+        margin-top: 1rem;
+        color: #0ff;
+      }
 
-    .project-image-circle {
-      width: 130px;
-      height: 130px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 3px solid #0ff;
-      box-shadow: 0 0 10px #0ff;
-      transition: transform 0.3s ease;
-    }
+      .project-image-circle {
+        width: 130px;
+        height: 130px;
+        object-fit: cover;
+        border-radius: 50%;
+        border: 3px solid #0ff;
+        box-shadow: 0 0 10px #0ff;
+        transition: transform 0.3s ease;
+      }
 
-    .project-image-circle:hover {
-      transform: scale(1.05);
-    }
+      .project-image-circle:hover {
+        transform: scale(1.05);
+      }
 
-    footer {
-      padding: 2rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #777;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>ily Devlep</h1>
-  </header>
+      footer {
+        padding: 2rem;
+        text-align: center;
+        font-size: 0.9rem;
+        color: #777;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>ily Devlep</h1>
+    </header>
 
-  <section class="projects-section" id="projects">
-    <div class="section-header">
-      <h2 class="section-title">Projects</h2>
-      <p class="section-subtitle">Some of my highlighted work</p>
-    </div>
-
-    <div class="projects-container">
-      <div class="project-card">
-        <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968052369195048/Screenshot_2024-06-06-17-39-00-65_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg" alt="Project 1" class="project-image-circle">
-        <h3 class="project-title">Project Alpha</h3>
+    <section class="projects-section" id="projects">
+      <div class="section-header">
+        <h2 class="section-title">Projects</h2>
+        <p class="section-subtitle">Some of my highlighted work</p>
       </div>
 
-      <div class="project-card">
-        <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968202578966558/Screenshot_2024-06-06-17-37-47-29_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg" alt="Project 2" class="project-image-circle">
-        <h3 class="project-title">Project Beta</h3>
-      </div>
+      <div class="projects-container">
+        <div class="project-card">
+          <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968052369195048/Screenshot_2024-06-06-17-39-00-65_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg" alt="Project 1" class="project-image-circle" />
+          <h3 class="project-title">Project Alpha</h3>
+        </div>
 
-      <div class="project-card">
-        <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968459382216704/Screenshot_2024-06-06-17-37-28-42_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg" alt="Project 3" class="project-image-circle">
-        <h3 class="project-title">Project Gamma</h3>
-      </div>
-    </div>
-  </section>
+        <div class="project-card">
+          <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968202578966558/Screenshot_2024-06-06-17-37-47-29_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg" alt="Project 2" class="project-image-circle" />
+          <h3 class="project-title">Project Beta</h3>
+        </div>
 
-  <footer>
-    &copy; 2025 ily Devlep. All rights reserved.
-  </footer>
-</body>
+        <div class="project-card">
+          <img src="https://cdn.discordapp.com/attachments/1128740069662910494/1247968459382216704/Screenshot_2024-06-06-17-37-28-42_e2d5b3f32b79de1d45acd1fad96fbb0f.jpg" alt="Project 3" class="project-image-circle" />
+          <h3 class="project-title">Project Gamma</h3>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      &copy; 2025 ily Devlep. All rights reserved.
+    </footer>
+  </body>
 </html>
